--- a/GenList.Specs/packages.config
+++ b/GenList.Specs/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="NUnit" version="3.5.0" targetFramework="net45" />
+  <package id="Selenium.Support" version="3.0.1" targetFramework="net45" />
+  <package id="Selenium.WebDriver" version="3.0.1" targetFramework="net45" />
   <package id="SpecFlow" version="2.1.0" targetFramework="net45" />
   <package id="SpecRun.SpecFlow" version="1.5.2" targetFramework="net45" />
 </packages>
